--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
   "homepage": "https://github.com/ctolgaky/Socketio_ball_chat",
   "dependencies": {
     "angular": "^1.7.8",
-    "semantic": "2.3.0"
+    "semantic": "2.3.0",
+    "jquery": "^3.4.1"
   }
 }
